# zenobuf

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  cliff.toml  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  src-files.js  zenobuf_implementation_plan.md
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/workflows/: changelog.yml  ci.yml  coverage.yml  dependency-update.yml  dependency-update.yml.disabled  docs.yml  release.yml  unified-release.yml  version-bump.yml
client/: all.html  fn.main.html  index.html
complete_app/: all.html  fn.main.html  index.html
crates/zenobuf-cli/: Cargo.toml
crates/zenobuf-cli/src/: error.rs  main.rs
crates/zenobuf-cli/src/commands/: call.rs  list.rs  mod.rs  monitor.rs  param.rs
crates/zenobuf-cli/tests/: command_basic_tests.rs
crates/zenobuf-core/: Cargo.toml
crates/zenobuf-core/benches/: pubsub.rs
crates/zenobuf-core/src/: client.rs  error.rs  executor.rs  lib.rs  message.rs  node.rs  parameter.rs  qos.rs  service.rs  time.rs  util.rs
crates/zenobuf-core/src/transport/: mock.rs  mod.rs  zenoh.rs
crates/zenobuf-core/tests/: builder_api_tests.rs  error_basic_tests.rs  integration_basic_tests.rs  message_tests.rs  node_basic_tests.rs  parameter_tests.rs  qos_tests.rs  resource_management_tests.rs  time_tests.rs
crates/zenobuf-examples/: Cargo.toml  build.rs
crates/zenobuf-examples/protos/: geometry.proto
crates/zenobuf-examples/src/: lib.rs
crates/zenobuf-macros/: Cargo.toml
crates/zenobuf-macros/src/: lib.rs
crates/zenobuf-macros/tests/: derive_tests.rs
docs/: README.md  api-guide.md  architecture.md  documentation-summary.md  getting-started.md
listener/: all.html  fn.main.html  index.html
parameters/: all.html  fn.main.html  index.html
search.desc/client/: client-desc-0-.js
search.desc/complete_app/: complete_app-desc-0-.js
search.desc/listener/: listener-desc-0-.js
search.desc/parameters/: parameters-desc-0-.js
search.desc/service/: service-desc-0-.js
search.desc/talker/: talker-desc-0-.js
search.desc/zenobuf_cli/: zenobuf_cli-desc-0-.js
search.desc/zenobuf_core/: zenobuf_core-desc-0-.js
search.desc/zenobuf_examples/: zenobuf_examples-desc-0-.js
search.desc/zenobuf_macros/: zenobuf_macros-desc-0-.js
search.index/: 0096285c8d49.js  018cf4fbd3f9.js  025e5db4bf39.js  03c55bf5344e.js  041f4ba2f1e9.js  050f586b19e0.js  05c34b845136.js  070fc477615e.js  073e05db0508.js  073f2562d02e.js  0847bd11ab9a.js  085770257895.js  08bcd510eca4.js  095d93ff8b26.js  0d3736fa06c7.js  0d426a241c40.js  0de22ff0f919.js  0e6bd05b991c.js  0ea6b08d9a36.js  0ef84adcc3c7.js  1039692b371f.js  103c3aad2e6b.js  106504b8836d.js  10770f9a0c64.js  1123251a4f3e.js  12f1be2d9c35.js  140929fa1e96.js  147e589c99a4.js  152b5b30be79.js  157557d087f5.js  16dd015e9497.js  17735b39039c.js  18d2366f4bcd.js  19885589c8ca.js  1c557a09ff38.js  1e1f6015d61e.js  1e5b3cebe31a.js  1ebedd8b7a81.js  1eee5193bf35.js  1f977795c2a5.js  (+108 more)
search.index/crateNames/: b734bc7d5195.js
search.index/desc/: 0dfb750b6216.js  ff2debf36b69.js
search.index/entry/: 0d0477b22faf.js  3545e025e666.js  456180748aef.js  521993c8a548.js  7c08905fcd42.js  d7a8bed327ec.js
search.index/function/: 0a74a6db5345.js  970db18ad588.js  a4db6559baba.js  e968a798a22e.js
search.index/generic_inverted_index/: 0dcd47fa2448.js  99450c751b7d.js  c4207b37e5f3.js  cc0afd6b870d.js
search.index/name/: 3e1b45d26445.js  a3a63482b001.js  bd636ee0d3b4.js
search.index/normalizedName/: 2571ba077879.js  2ccc33430732.js  88323502991e.js
search.index/path/: 2315eeea4fce.js  42fd093143df.js  5db53dae18a6.js  9718fe3f8a0c.js  9d8425869cf6.js
search.index/type/: 14c6bb5b5f25.js  4a763f8bc4ac.js  681cb270c11d.js  f724c12e7954.js
service/: all.html  fn.main.html  index.html
src/client/: client.rs.html
src/complete_app/: complete_app.rs.html
src/listener/: listener.rs.html
src/parameters/: parameters.rs.html
src/service/: service.rs.html
src/talker/: talker.rs.html
src/zenobuf_cli/: error.rs.html  main.rs.html
src/zenobuf_core/: client.rs.html  error.rs.html  executor.rs.html  lib.rs.html  message.rs.html  node.rs.html  parameter.rs.html  publisher.rs.html  qos.rs.html  service.rs.html  subscriber.rs.html  time.rs.html  util.rs.html
src/zenobuf_examples/: lib.rs.html
src/zenobuf_macros/: lib.rs.html
starter-template/: Cargo.toml  README.md  build.rs
starter-template/protos/: messages.proto
starter-template/src/: main.rs
talker/: all.html  fn.main.html  index.html
zenobuf-cli/: Cargo.toml
zenobuf-cli/src/commands/: call.rs  list.rs  monitor.rs  param.rs
zenobuf-core/src/: error.rs  lib.rs  publisher.rs  subscriber.rs  time.rs  util.rs
zenobuf-examples/: build.rs
zenobuf-examples/protos/: example_service.proto
zenobuf-macros/: Cargo.toml
zenobuf-macros/src/: lib.rs
zenobuf_cli/: all.html  enum.Commands.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
zenobuf_cli/commands/: index.html  sidebar-items.js
zenobuf_cli/error/: enum.Error.html  index.html  type.Result.html
zenobuf_core/: all.html  index.html  sidebar-items.js
zenobuf_core/client/: index.html  struct.Client.html
zenobuf_core/error/: enum.Error.html  index.html  sidebar-items.js  trait.ErrorContext.html  type.Result.html
zenobuf_core/executor/: index.html  sidebar-items.js  struct.CallbackExecutor.html  type.Callback.html
zenobuf_core/message/: fn.decode_message.html  fn.encode_message.html  fn.message_type_name.html  index.html  sidebar-items.js  trait.Message.html
zenobuf_core/node/: index.html  sidebar-items.js  struct.ClientBuilder.html  struct.ClientHandle.html  struct.DropGuard.html  struct.Node.html  struct.PublisherBuilder.html  struct.PublisherHandle.html  struct.ServiceBuilder.html  struct.ServiceHandle.html  struct.SubscriberBuilder.html  struct.SubscriberHandle.html
zenobuf_examples/: all.html  index.html
zenobuf_macros/: all.html  derive.ZenobufMessage.html  index.html  sidebar-items.js
(+122 files in other folders)
