[package]
name = "zenobuf-cli"
version = "0.1.0"
edition = "2021"
authors = ["Zenobuf Team"]
description = "Command-line tools for the Zenobuf framework"
license = "MIT OR Apache-2.0"

[dependencies]
zenobuf-core = { path = "../zenobuf-core" }
zenoh = "1.3.3"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = "0.4"
