[package]
name = "zenobuf-cli"
version = "0.2.4"
edition = "2021"
authors = ["Zenobuf Team"]
description = "Command-line tools for the Zenobuf framework - monitor topics, call services, manage parameters"
license = "MIT OR Apache-2.0"
repository = "https://github.com/varunkamath/zenobuf"
homepage = "https://github.com/varunkamath/zenobuf"
documentation = "https://docs.rs/zenobuf-cli"
keywords = ["cli", "robotics", "zenobuf", "monitoring", "tools"]
categories = ["command-line-utilities", "robotics", "development-tools"]
readme = "../../README.md"

[dependencies]
zenobuf-core = { path = "../zenobuf-core", version = "0.2.4" }
zenoh = "1.3.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
prost = "0.13.5"
