[package]
name = "zenobuf-core"
version = "0.2.0"
edition = "2021"
authors = ["Zenobuf Team"]
description = "Core library for the Zenobuf framework"
license = "MIT OR Apache-2.0"

[dependencies]
zenoh = "1.3.3"
prost = "0.13.5"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
futures = "0.3"
rand = "0.9.0"
