[package]
name = "zenobuf-core"
version = "0.2.6"
edition = "2021"
authors = ["Zenobuf Team"]
description = "A simpler ROS-like framework in Rust with Zenoh transport and Protocol Buffers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/varunkamath/zenobuf"
homepage = "https://github.com/varunkamath/zenobuf"
documentation = "https://docs.rs/zenobuf-core"
keywords = ["robotics", "ros", "zenoh", "protobuf", "distributed"]
categories = ["network-programming", "robotics", "asynchronous"]
readme = "../../README.md"

[dependencies]
zenoh = "1.3.4"
prost = "0.13.5"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
futures = "0.3"
rand = "0.9.1"
