[package]
name = "zenobuf-core"
version = "0.3.3"
edition = "2021"
authors = ["Zenobuf Team"]
description = "A simpler ROS-like framework in Rust with Zenoh transport and Protocol Buffers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/varunkamath/zenobuf"
homepage = "https://github.com/varunkamath/zenobuf"
documentation = "https://docs.rs/zenobuf-core"
readme = "../../README.md"

[dependencies]
zenoh = "1.4.0"
prost = "0.14.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
futures = "0.3"
rand = "0.9.1"
