[package]
name = "zenobuf-examples"
version = "0.3.1"
edition = "2021"
authors = ["Zenobuf Team"]
description = "Example applications for the Zenobuf framework - publishers, subscribers, services, and clients"
license = "MIT OR Apache-2.0"
repository = "https://github.com/varunkamath/zenobuf"
homepage = "https://github.com/varunkamath/zenobuf"
documentation = "https://docs.rs/zenobuf-examples"
readme = "../../README.md"

[dependencies]
zenobuf-core = { path = "../zenobuf-core", version = "0.3.1" }
zenobuf-macros = { path = "../zenobuf-macros", version = "0.3.1" }
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.14.0"
