[package]
name = "zenobuf-macros"
version = "0.2.5"
edition = "2021"
authors = ["Zenobuf Team"]
description = "Procedural macros for the Zenobuf framework"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
zenobuf-core = { path = "../zenobuf-core", version = "0.2.5" }
prost = "0.13.5"
